@@ -5,6 +5,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'com.diffplug.spotless'
+    id("com.github.spotbugs") version "6.4.8"
 }
 
 java {
@@ -31,6 +32,19 @@ javadoc {
         'io/littlehorse/common/util/LHUtil.java'
     ]
     options.memberLevel = JavadocMemberLevel.PUBLIC
+}
+
+spotbugs {
+    excludeFilter = file('spotbugs-exclude.xml')
+    baselineFile = file("$rootDir/server-spotbugs-baseline.xml")
+}
+
+tasks.spotbugsMain {
+    reports.create("html") {
+        required = true
+        outputLocation = file("$buildDir/reports/spotbugs.html")
+        setStylesheet("fancy-hist.xsl")
+    }
 }
 
 task sourcesJar(type: Jar) {
@@ -179,6 +193,7 @@ compileJava {
 }
 
 test {
+    dependsOn spotbugsMain
     useJUnitPlatform()
     filter {
         includeTestsMatching "io.littlehorse.**"
@@ -192,8 +207,11 @@ test {
 }
 
 task e2e(type: Test, dependsOn: [compileJava]){
+    dependsOn spotbugsMain
     systemProperty("api.version", "1.44") // Docker version compatible with {testcontainersVersion}
-    useJUnitPlatform()
+    useJUnitPlatform {
+        excludeTags "slow"
+    }
     filter {
         includeTestsMatching "e2e.**"
         excludeTestsMatching "io.littlehorse.**"
@@ -205,10 +223,25 @@ task e2e(type: Test, dependsOn: [compileJava]){
     jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '-Xms8192m', '-Xmx8192m', '-Xss2m', '-XX:+UseParallelGC', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
     classpath = sourceSets.test.runtimeClasspath
     testClassesDirs = sourceSets.test.output.classesDirs
+}
 
-    // // Enables parallelism on the e2e tests
-    // maxParallelForks = 2
-    // systemProperty "junit.jupiter.execution.parallel.enabled", "true"
+task e2eSlow(type: Test, dependsOn: [compileJava]){
+    description = "Run slow e2e tests"
+    systemProperty("api.version", "1.44") // Docker version compatible with {testcontainersVersion}
+    useJUnitPlatform {
+        includeTags "slow"
+    }
+    filter {
+        includeTestsMatching "e2e.**"
+        excludeTestsMatching "io.littlehorse.**"
+    }
+    testLogging {
+        events 'passed', 'skipped', 'failed'
+        exceptionFormat = 'full'
+    }
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '-Xms8192m', '-Xmx8192m', '-Xss2m', '-XX:+UseParallelGC', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
+    classpath = sourceSets.test.runtimeClasspath
+    testClassesDirs = sourceSets.test.output.classesDirs
 }
 
 spotless {
